--- a/gesah-installer/webapp/src/main/webapp/themes/gesah/i18n/all_de_DE.properties
+++ b/gesah-installer/webapp/src/main/webapp/themes/gesah/i18n/all_de_DE.properties
@@ -31,7 +31,7 @@ indiv_foafperson_for = für
 indiv_foafperson_return = Zurück
 uri_icon = uri icon
 
-intro_title = Graphischen Einzelblätter der Sammlung des Architekten Albrecht Haupt (GESAH)
+intro_title = Graphische Einzelblätter der Sammlung des Architekten Albrecht Haupt (GESAH)
 intro_para1 = Die "Sammlung Albrecht Haupt" ist eine überregional und international bedeutsame Sondersammlung der TIB. Sie wurde von dem lange Jahre an der damaligen Technischen Hochschule Hannover lehrenden Architekten und Bauforscher Karl Albrecht Haupt (1852–1932) zusammengetragen, der sie noch zu Lebzeiten der Bibliothek der TH Hannover übergab.
 intro_para2 = Bereits 1941 bewertete die Architekturhistorikerin Lieselotte Vossnack die Sammlung als einen herausragenden Bestand, „[...] vergleichbar lediglich mit der aus öffentlichen Mitteln zustande gekommenen Sammlung der Staatlichen Kunstbibliothek zu Berlin” (heute Kunstbibliothek im Verbund der Staatlichen Museen zu Berlin, Stiftung Preußischer Kulturbesitz). Haupt selbst äußerte 1923 den Wunsch „daß die Sammlung durch ein ausführliches, wissenschaftlichen Anforderungen entsprechendes Verzeichnis erschlossen wird und die Kenntnis von ihrem Vorhandensein in weitere Kreise in- und außerhalb Hannovers dringt.“
 intro_searchvivo = VIVO durchsuchen
