--- a/gesah-installer/webapp/src/main/webapp/local/i18n/all.properties
+++ b/gesah-installer/webapp/src/main/webapp/local/i18n/all.properties
@@ -3,3 +3,47 @@
 #
 # Default (English)
 #
+#
+# Local customisations override any provided messages
+#
+# Default (English)
+#
+creation_for = creation entry for
+select_attribution_type_value = select an attribution type
+select_technique_value = select technique
+select_material_value = select material
+select_role_type_value = select role type creator / producer
+attribution_type = Attribution Type
+material = Material
+technique = Technique
+role_type = Role Type
+literal_date_appelatlion = Literal Date Appelatlion
+description = Description
+
+
+place = Place
+verify_match_capitalized = Verify this match
+select_a_person = select a person
+selected_person = Selected Person
+enter_a_name = enter a name
+person_name_capitalized = Person Name
+unknown_creator = Unknown Creator
+unknown_creator_role = Unknown Creator Role
+start_year_must_precede_end = The Start Year must be earlier than the End Year.
+end_year_must_be_later = The End Year must be later than the Start Year.
+year_hint_format = YYYY
+person_capitalized = Person
+technique_name = Technique Name
+material_name = Material Name
+attrType_name = Attribution Type Name
+place_name = Place Name
+or_other = or other
+save_changes = Save
+creation_technique = Creation Technique
+unknown_creation_technique = Unknown Creation Technique
+creator_name = Creator Name
+unknown_material = Unknown Material
+unknown_attribution_type = Unknown Attribution Type
+unknown_place = Unknown Place
+supplemental_information_hint_origin = (supplemental information about the origin of the cultural object)
+
