--- a/gesah-installer/webapp/src/main/webapp/local/i18n/all.properties
+++ b/gesah-installer/webapp/src/main/webapp/local/i18n/all.properties
@@ -9,6 +9,8 @@
 # Default (English)
 #
 creation_for = creation entry for
+production_for = production entry for
+edition_for = edition entry for
 select_attribution_type_value = select an attribution type
 select_technique_value = select technique
 select_material_value = select material
@@ -25,6 +27,12 @@ place = Place
 verify_match_capitalized = Verify this match
 select_a_person = select a person
 selected_person = Selected Person
+selected_agent = Selected Participant
+select_a_participant = Select a participant
+select_participant_type = Select participant type
+agent_type_capitalized = Participant Type
+agent_capitalized = Participant
+selected_place = Selected Place
 enter_a_name = enter a name
 person_name_capitalized = Person Name
 unknown_creator = Unknown Creator
@@ -33,6 +41,7 @@ start_year_must_precede_end = The Start Year must be earlier than the End Year.
 end_year_must_be_later = The End Year must be later than the Start Year.
 year_hint_format = YYYY
 person_capitalized = Person
+place_name_capitalized = Place Name
 technique_name = Technique Name
 material_name = Material Name
 attrType_name = Attribution Type Name
