--- a/gesah-installer/webapp/src/main/webapp/local/i18n/all.properties
+++ b/gesah-installer/webapp/src/main/webapp/local/i18n/all.properties
@@ -25,8 +25,17 @@ description = Description
 title_for = "title" entry for
 title = Title
 title_type_capitalized = Title Type
-
 enter_title_value = Please enter a value in the Title field.
+
+measurements_for = "measurements" entry for
+height = Height
+width = Width
+depth = Depth
+diameter = Diameter
+measurement_specification_capitalized = Measurement Specification
+enter_depth_value = Please enter a value in the Depth field.
+enter_height_value = Please enter a value in the Height field.
+enter_width_value = Please enter a value in the Width field.
 
 place = Place
 verify_match_capitalized = Verify this match
