Remove mandatory fields

--- a/gesah-installer/webapp/src/main/webapp/local/i18n/all.properties
+++ b/gesah-installer/webapp/src/main/webapp/local/i18n/all.properties
@@ -36,6 +36,7 @@ measurement_specification_capitalized = Measurement Specification
 enter_depth_value = Please enter a value in the Depth field.
 enter_height_value = Please enter a value in the Height field.
 enter_width_value = Please enter a value in the Width field.
+enter_specification_value = Please select a measurement specification.
 
 place = Place
 verify_match_capitalized = Verify this match
