Update object has creation display

--- a/gesah-installer/webapp/src/main/webapp/local/i18n/all.properties
+++ b/gesah-installer/webapp/src/main/webapp/local/i18n/all.properties
@@ -27,6 +27,9 @@ title = Title
 title_type_capitalized = Title Type
 enter_title_value = Please enter a value in the Title field.
 
+inscription_for = Inscription for
+inscription_type_capitalized = Inscription Type
+
 measurements_for = "measurements" entry for
 height = Height
 width = Width
@@ -71,3 +74,8 @@ unknown_attribution_type = Unknown Attribution Type
 unknown_place = Unknown Place
 supplemental_information_hint_origin = (supplemental information about the origin of the cultural object)
 
+place_capitalized = Place
+material_capitalized = Material
+technique_capitalized = Technique
+description_capitalized = Description
+date_capitalized = Date
