--- a/gesah-installer/webapp/src/main/webapp/local/i18n/all.properties
+++ b/gesah-installer/webapp/src/main/webapp/local/i18n/all.properties
@@ -79,3 +79,4 @@ material_capitalized = Material
 technique_capitalized = Technique
 description_capitalized = Description
 date_capitalized = Date
+transcription_capitalized = Transcription
