Preservation and Provenance views

--- a/gesah-installer/webapp/src/main/webapp/local/i18n/all.properties
+++ b/gesah-installer/webapp/src/main/webapp/local/i18n/all.properties
@@ -80,3 +80,4 @@ technique_capitalized = Technique
 description_capitalized = Description
 date_capitalized = Date
 transcription_capitalized = Transcription
+treatment_capitalized = Treatment
