--- a/gesah-installer/webapp/src/main/webapp/themes/gesah/i18n/all.properties
+++ b/gesah-installer/webapp/src/main/webapp/themes/gesah/i18n/all.properties
@@ -5,9 +5,9 @@ view = view
 currently_no_papers_for = Currently there are no {0} papers for
 identity_index = Index
 service_provider_role = Service Provider Role
-intro_searchvivo = Search VIVO
+intro_searchvivo = Search GESAH
 grant_type = grant Type
-grants_in_vivo = grants in VIVO
+grants_in_vivo = grants in GESAH
 last_grant = Last Grant
 no_departments_found = No academic departments found.
 leadership_role = Leadership Role
@@ -19,7 +19,7 @@ menu_copyright = copyright
 last_publication = Last publication
 menu_item = menu item
 address_street_three = address street three
-vivo_profile = VIVO profile
+vivo_profile = GESAH profile
 identity_myprofile = My profile
 unable_to_handle_grant_editing = This form is unable to handle the editing of this grant because it is associated with multiple grant individuals.
 unable_to_handle_position_editing = This form is unable to handle the editing of this position because it is associated with multiple Position individuals.
@@ -73,7 +73,7 @@ researchers = researchers
 email_address = Email Address
 years_participation_in = Years of Participation in
 menu_termuse = Terms of Use
-identity_title = VIVO | connect share discover
+identity_title = GESAH | connect share discover
 map_state_string = state.
 intro_filtersearch = Filter search
 return_to_grant = Return to grant
@@ -108,9 +108,9 @@ explorer_area_open_science = Open Science
 explorer_area_open_access = Open Access
 explorer_area_view_all = View all
 
-explorer_about_title = About this VIVO
-explorer_about = VIVO is a member-supported, open source software for representing scholarship. VIVO supports recording, editing, searching, browsing, analysing, and visualizing scholarly activity. This VIVO represents the research output of the <a href="/fis/individual?uri=http://d-nb.info/gnd/1080328793">	German National Library of Science and Technology (TIB)</a> as linked data.
-explorer_about_more = Read more about VIVO
+explorer_about_title = About this GESAH
+explorer_about = Vitro is a member-supported, open source software for representing scholarship. Vitro supports recording, editing, searching, browsing, analysing, and visualizing scholarly activity. This Vitro represents the research output of the <a href="/fis/individual?uri=http://d-nb.info/gnd/1080328793">	German National Library of Science and Technology (TIB)</a> as linked data.
+explorer_about_more = Read more about Vitro
 
 menu_data_protection = Data protection
 menu_imprint = Imprint
@@ -121,3 +121,5 @@ menu_imprimnt_url = https://www.tib.eu/en/service/terms-of-use/
 cookie_data_protection=More info.
 cookie_button=Got it
 cookie_message=This website uses cookies to ensure you get the best experience on our website.
+
+page_title = GESAH - Graphic Sheets of the Collection of Architect Albrecht Haupt
