Update all.properties - add new properties for inscription

--- a/gesah-installer/webapp/src/main/webapp/local/i18n/all.properties
+++ b/gesah-installer/webapp/src/main/webapp/local/i18n/all.properties
@@ -8,6 +8,13 @@
 #
 # Default (English)
 #
+inscription_for = inscription entry for
+inscription_output_type_capitalized = Inscription output type
+inscription_type = Inscription specification
+transcription = Transcription
+comment = Comment
+supplemental_information_hint_inscription = (supplemental information about the inscription on the cultural object)
+
 creation_for = creation entry for
 production_for = production entry for
 edition_for = edition entry for
