Update all.properties - added comment_capitalized

--- a/gesah-installer/webapp/src/main/webapp/local/i18n/all.properties
+++ b/gesah-installer/webapp/src/main/webapp/local/i18n/all.properties
@@ -85,6 +85,7 @@ place_capitalized = Place
 material_capitalized = Material
 technique_capitalized = Technique
 description_capitalized = Description
+comment_capitalized = Comment
 date_capitalized = Date
 transcription_capitalized = Transcription
 treatment_capitalized = Treatment
