feat: mark designation draft

--- a/gesah-installer/webapp/src/main/webapp/local/i18n/all.properties
+++ b/gesah-installer/webapp/src/main/webapp/local/i18n/all.properties
@@ -89,3 +89,11 @@ comment_capitalized = Comment
 date_capitalized = Date
 transcription_capitalized = Transcription
 treatment_capitalized = Treatment
+
+mark_designation_collectors_mark = Collector's mark
+mark_designation_select_collectors_mark = Selected collector's mark
+mark_designation_location = Mark location
+mark_designation_label = Designation mark title
+
+
+
