--- a/gesah-installer/webapp/src/main/webapp/local/i18n/all.properties
+++ b/gesah-installer/webapp/src/main/webapp/local/i18n/all.properties
@@ -90,10 +90,11 @@ date_capitalized = Date
 transcription_capitalized = Transcription
 treatment_capitalized = Treatment
 
-mark_designation_collectors_mark = Collector's mark
+mark_designation_collectors_mark = Collector's mark:
 mark_designation_select_collectors_mark = Selected collector's mark
 mark_designation_location = Mark location
 mark_designation_label = Designation mark title
 
-
+mark_id = Mark ID
+mark_url = Mark URL
 
