feat: work index entry form. GESAHV-130

--- a/gesah-installer/webapp/src/main/webapp/local/i18n/all.properties
+++ b/gesah-installer/webapp/src/main/webapp/local/i18n/all.properties
@@ -98,3 +98,13 @@ mark_designation_label = Designation mark title
 mark_id = Mark ID
 mark_url = Mark URL
 
+work_index_entry_label = Work index entry label
+work_index_entry_index_number = Index number
+work_index_entry_select_work_index = Selected index
+work_index_label = Work index label
+work_index_title = Long title
+work_index_url = Index url
+
+
+
+
