fix: improvements for work index entry form

--- a/gesah-installer/webapp/src/main/webapp/local/i18n/all.properties
+++ b/gesah-installer/webapp/src/main/webapp/local/i18n/all.properties
@@ -104,6 +104,7 @@ work_index_entry_select_work_index = Selected index
 work_index_label = Work index label
 work_index_title = Long title
 work_index_url = Index url
+work_index_entry_index_number_url = Index number url
 
 
 
