feat: object of provenance custom entry form

--- a/gesah-installer/webapp/src/main/webapp/local/i18n/all.properties
+++ b/gesah-installer/webapp/src/main/webapp/local/i18n/all.properties
@@ -106,6 +106,7 @@ work_index_title = Long title
 work_index_url = Index url
 work_index_entry_index_number_url = Index number url
 
-
+object_of_provenance=Object of provenance activity for
+provenance_type=Provenance type
 
 
