feat: Object of preservation custom entry form

--- a/gesah-installer/webapp/src/main/webapp/local/i18n/all.properties
+++ b/gesah-installer/webapp/src/main/webapp/local/i18n/all.properties
@@ -109,4 +109,7 @@ work_index_entry_index_number_url = Index number url
 object_of_provenance=Object of provenance activity for
 provenance_type=Provenance type
 
+object_of_preservation=Object of preservation activity for
+preservation_type=Preservation type
+treatment_specifics=Treatment specifics
 
