feat: search feild placeholder text

--- a/gesah-installer/webapp/src/main/webapp/themes/gesah/i18n/all.properties
+++ b/gesah-installer/webapp/src/main/webapp/themes/gesah/i18n/all.properties
@@ -6,6 +6,7 @@ currently_no_papers_for = Currently there are no {0} papers for
 identity_index = Index
 service_provider_role = Service Provider Role
 intro_searchvivo = Search GESAH
+search_field_placeholder=Enter search term
 grant_type = grant Type
 grants_in_vivo = grants in GESAH
 last_grant = Last Grant
