feat: event custom entry form

--- a/gesah-installer/webapp/src/main/webapp/local/i18n/all.properties
+++ b/gesah-installer/webapp/src/main/webapp/local/i18n/all.properties
@@ -113,3 +113,12 @@ object_of_preservation=Object of preservation activity for
 preservation_type=Preservation type
 treatment_specifics=Treatment specifics
 
+event_type=Event type
+object_of_event=Object of event activity for
+selected_event=Selected event
+event_capitalized=Event name
+related_publication=Related publication
+
+organizer_type_capitalized=Organizer type
+organizer_capitalized=Organizer
+selected_organizer=Selected organizer
