feat: feedback button

--- a/gesah-installer/webapp/src/main/webapp/themes/gesah/i18n/all_de_DE.properties
+++ b/gesah-installer/webapp/src/main/webapp/themes/gesah/i18n/all_de_DE.properties
@@ -937,3 +937,5 @@ menu_imprimnt_url = https://www.tib.eu/de/service/benutzungsordnung/
 cookie_data_protection=Weitere Informationen.
 cookie_button=OK
 cookie_message=Diese Webseite verwendet Cookies, um die Bedienfreundlichkeit zu erhöhen.
+
+feedback_icon = Rückmeldung
