explore collection style improvements

--- a/gesah-installer/webapp/src/main/webapp/themes/gesah/i18n/all.properties
+++ b/gesah-installer/webapp/src/main/webapp/themes/gesah/i18n/all.properties
@@ -134,3 +134,5 @@ gesah_current_inventory_number = inv.
 gesah_search_created_by = by
 
 feedback_icon = Feedback 
+
+explore_collection_text = Explore the collection
