--- a/gesah-installer/webapp/src/main/webapp/themes/gesah/i18n/all_de_DE.properties
+++ b/gesah-installer/webapp/src/main/webapp/themes/gesah/i18n/all_de_DE.properties
@@ -939,3 +939,5 @@ cookie_button=OK
 cookie_message=Diese Webseite verwendet Cookies, um die Bedienfreundlichkeit zu erhöhen.
 
 feedback_icon = Rückmeldung
+
+explore_collection_text = Erkunden Sie die Sammlung
