added multivalued options, added user input fields, resolved issues with input radio labels

--- a/gesah-installer/webapp/src/main/webapp/local/i18n/all.properties
+++ b/gesah-installer/webapp/src/main/webapp/local/i18n/all.properties
@@ -122,3 +122,5 @@ related_publication=Related publication
 organizer_type_capitalized=Organizer type
 organizer_capitalized=Organizer
 selected_organizer=Selected organizer
+
+results_found=results found
