GESAHV-158 Sorting results

--- a/gesah-installer/webapp/src/main/webapp/themes/gesah/i18n/all_de_DE.properties
+++ b/gesah-installer/webapp/src/main/webapp/themes/gesah/i18n/all_de_DE.properties
@@ -941,3 +941,7 @@ cookie_message=Diese Webseite verwendet Cookies, um die Bedienfreundlichkeit zu 
 feedback_icon = Rückmeldung
 
 explore_collection_text = Erkunden Sie die Sammlung
+
+
+search_results_relevance = Relevanz
+search_results_sort_by = Sortieren nach
