added results per page select menu

--- a/gesah-installer/webapp/src/main/webapp/themes/gesah/i18n/all_en_US.properties
+++ b/gesah-installer/webapp/src/main/webapp/themes/gesah/i18n/all_en_US.properties
@@ -2,3 +2,4 @@ from = from
 to = to
 search_results_relevance = Relevance
 search_results_sort_by = Sort by
+search_results_per_page = Results per page
