--- a/gesah-installer/webapp/src/main/webapp/themes/gesah/i18n/all_de_DE.properties
+++ b/gesah-installer/webapp/src/main/webapp/themes/gesah/i18n/all_de_DE.properties
@@ -946,4 +946,4 @@ explore_collection_text = Erkunden Sie die Sammlung
 search_results_relevance = Relevanz
 search_results_sort_by = Sortieren nach
 
-search_results_per_page = Ergebnisse pro seite
+search_results_per_page = Ergebnisse pro Seite
