form.inv number fixes

--- a/gesah-installer/webapp/src/main/webapp/themes/gesah/i18n/all.properties
+++ b/gesah-installer/webapp/src/main/webapp/themes/gesah/i18n/all.properties
@@ -131,7 +131,7 @@ gesah_search_element_edited = Edited
 gesah_search_element_produced = Produced
 gesah_search_in_year = in
 gesah_current_inventory_number = inv.
-gesah_former_inventory_number = form. inv.
+gesah_former_inventory_number = inv.
 gesah_search_created_by = by
 
 feedback_icon = Feedback 
