--- a/gesah-installer/webapp/src/main/webapp/themes/gesah/i18n/all_en_US.properties
+++ b/gesah-installer/webapp/src/main/webapp/themes/gesah/i18n/all_en_US.properties
@@ -3,3 +3,7 @@ to = to
 search_results_relevance = Relevance
 search_results_sort_by = Sort by
 search_results_per_page = Results per page
+
+collection_link_text = Collection Albrecht Haupt
+project_link_text = Projects
+contact_link_text = Contact
