Home page modified, more images added

--- a/gesah-installer/webapp/src/main/webapp/themes/gesah/i18n/all.properties
+++ b/gesah-installer/webapp/src/main/webapp/themes/gesah/i18n/all.properties
@@ -135,3 +135,5 @@ gesah_search_created_by = by
 feedback_icon = Feedback 
 
 explore_collection_text = Explore the collection
+
+search_collection_text = 
