--- a/gesah-installer/webapp/src/main/webapp/themes/gesah/i18n/all_de_DE.properties
+++ b/gesah-installer/webapp/src/main/webapp/themes/gesah/i18n/all_de_DE.properties
@@ -949,3 +949,8 @@ search_results_per_page = Ergebnisse pro Seite
 collection_link_text = Sammlung Albrecht Haupt
 project_link_text = Projekte
 contact_link_text = Kontakt
+search_collection_text = Durchsuchen Sie die Sammlung
+more_objects_in_albrecht_haupt_collection = Weiter Werke der Sammlung Albrecht Haupt
+
+haupt_library_img_text = Bibliothek Haupt
+haupt_sketches_img_text = Reiseskizzen Haupt
