--- a/gesah-installer/webapp/src/main/webapp/themes/gesah/i18n/all_en_US.properties
+++ b/gesah-installer/webapp/src/main/webapp/themes/gesah/i18n/all_en_US.properties
@@ -7,3 +7,9 @@ search_results_per_page = Results per page
 collection_link_text = Collection Albrecht Haupt
 project_link_text = Projects
 contact_link_text = Contact
+
+search_collection_text = Search the collection
+more_objects_in_albrecht_haupt_collection = More objects in the collection Albrecht Haupt
+
+haupt_library_img_text = Haupt Library
+haupt_sketches_img_text = Haupt Travel sketches
