replaced logo image

--- a/gesah-installer/webapp/src/main/webapp/themes/gesah/i18n/all_de_DE.properties
+++ b/gesah-installer/webapp/src/main/webapp/themes/gesah/i18n/all_de_DE.properties
@@ -954,3 +954,5 @@ more_objects_in_albrecht_haupt_collection = Weiter Werke der Sammlung Albrecht H
 
 haupt_library_img_text = Bibliothek Haupt
 haupt_sketches_img_text = Reiseskizzen Haupt
+
+header_logo_file_name = tib-full-ahco-de.svg
