--- a/gesah-installer/webapp/src/main/webapp/themes/gesah/i18n/all_en_US.properties
+++ b/gesah-installer/webapp/src/main/webapp/themes/gesah/i18n/all_en_US.properties
@@ -13,3 +13,5 @@ more_objects_in_albrecht_haupt_collection = More objects in the collection Albre
 
 haupt_library_img_text = Haupt Library
 haupt_sketches_img_text = Haupt Travel sketches
+
+header_logo_file_name = tib-full-ahco-en.svg
