set language specific links

--- a/gesah-installer/webapp/src/main/webapp/themes/gesah/i18n/all_de_DE.properties
+++ b/gesah-installer/webapp/src/main/webapp/themes/gesah/i18n/all_de_DE.properties
@@ -948,6 +948,8 @@ search_results_per_page = Ergebnisse pro Seite
 
 collection_link_text = Sammlung Albrecht Haupt
 project_link_text = Projekte
+collection_link_value = https://www.tib.eu/de/recherchieren-entdecken/sondersammlungen/sammlung-albrecht-haupt
+project_link_value = https://projects.tib.eu/haupt
 contact_link_text = Kontakt
 search_collection_text = Durchsuchen Sie die Sammlung
 more_objects_in_albrecht_haupt_collection = Weiter Werke der Sammlung Albrecht Haupt
