--- a/gesah-installer/webapp/src/main/webapp/themes/gesah/i18n/all_en_US.properties
+++ b/gesah-installer/webapp/src/main/webapp/themes/gesah/i18n/all_en_US.properties
@@ -6,6 +6,8 @@ search_results_per_page = Results per page
 
 collection_link_text = Collection Albrecht Haupt
 project_link_text = Projects
+collection_link_value = https://www.tib.eu/en/search-discover/special-collections/the-albrecht-haupt-collection
+project_link_value = https://projects.tib.eu/en/haupt/
 contact_link_text = Contact
 
 search_collection_text = Search the collection
