--- a/gesah-installer/webapp/src/main/webapp/themes/gesah/i18n/all_de_DE.properties
+++ b/gesah-installer/webapp/src/main/webapp/themes/gesah/i18n/all_de_DE.properties
@@ -952,7 +952,7 @@ collection_link_value = https://www.tib.eu/de/recherchieren-entdecken/sondersamm
 project_link_value = https://projects.tib.eu/haupt
 contact_link_text = Kontakt
 search_collection_text = Durchsuchen Sie die Sammlung
-more_objects_in_albrecht_haupt_collection = Weiter Werke der Sammlung Albrecht Haupt
+more_objects_in_albrecht_haupt_collection = Weitere Werke der Sammlung Albrecht Haupt
 
 haupt_library_img_text = Bibliothek Haupt
 haupt_sketches_img_text = Reiseskizzen Haupt
