--- a/gesah-installer/webapp/src/main/webapp/themes/gesah/i18n/all_de_DE.properties
+++ b/gesah-installer/webapp/src/main/webapp/themes/gesah/i18n/all_de_DE.properties
@@ -952,19 +952,20 @@ collection_link_value = https://www.tib.eu/de/recherchieren-entdecken/sondersamm
 project_link_value = https://projects.tib.eu/haupt
 contact_link_text = Kontakt
 search_collection_text = Durchsuchen Sie die Sammlung
-more_objects_in_albrecht_haupt_collection = Weitere Werke der Sammlung Albrecht Haupt
+more_objects_in_albrecht_haupt_collection = Weitere Teilbestände der Sammlung Albrecht Haupt
 
-haupt_library_img_text = Bibliothek Haupt
-haupt_sketches_img_text = Reiseskizzen Haupt
+haupt_library_img_text = Bibliothek
+haupt_sketches_img_text = Reiseskizzen 
 
 header_logo_file_name = logo.svg
 
 home_page_intro_header = Die Sammlung Albrecht Haupt
 home_page_intro_text = Entdecken Sie die Sammlung des Architekten und Bauhistorikers Albrecht Haupt (1852-1932), eine der wenigen noch geschlossen erhaltenen Sammlungen dieser Art in Deutschland. Seit 1901 gehören Haupts historische Bibliothek, seine Sammlungen europäischer Handzeichnungen und Druckgraphiken sowie seine eigenhändigen Reiseskizzen zu den <a href="https://www.tib.eu/de/recherchieren-entdecken/sondersammlungen/sammlung-albrecht-haupt">Sonderbeständen</a> der Bibliothek und werden gegenwärtig <a href="https://projects.tib.eu/haupt/">digital erschlossen</a> und hier zugänglich gemacht.
 
+footer_legal_notices = Legal notices
+footer_technical_information = Technische Informationen
 
-
-
+menu_images_and_metadata = Rechtliches Bilder und Metadaten
 
 
 
