--- a/gesah-installer/webapp/src/main/webapp/themes/gesah/i18n/all_en_US.properties
+++ b/gesah-installer/webapp/src/main/webapp/themes/gesah/i18n/all_en_US.properties
@@ -11,15 +11,19 @@ project_link_value = https://projects.tib.eu/en/haupt/
 contact_link_text = Contact
 
 search_collection_text = Search the collection
-more_objects_in_albrecht_haupt_collection = More objects in the collection Albrecht Haupt
+more_objects_in_albrecht_haupt_collection = Further parts of the Albrecht Haupt Collection
 
-haupt_library_img_text = Haupt Library
-haupt_sketches_img_text = Haupt Travel sketches
+haupt_library_img_text = Library
+haupt_sketches_img_text = Travel sketches
 
 header_logo_file_name = logo.svg
 
-home_page_intro_header = The Collection Albrecht Haupt
+home_page_intro_header = The Albrecht Haupt Collection
 home_page_intro_text = Discover the collection of the architect and building historian Albrecht Haupt (1852-1932), one of the few still cohesively preserved collections of this kind in Germany. Since 1901, Haupt's historical library, his collections of European hand drawings and prints as well as his own travel sketches have been part of the library's <a href="https://www.tib.eu/de/recherchieren-entdecken/sondersammlungen/sammlung-albrecht-haupt">special holdings</a> and are currently being <a href="https://projects.tib.eu/haupt/">digitally indexed</a> and made accessible here.
 
+footer_legal_notices = Legal notices
+footer_technical_information = Technical information
+
+menu_images_and_metadata = Images and metadata
 
 
