--- a/gesah-installer/webapp/src/main/webapp/themes/gesah/i18n/all_de_DE.properties
+++ b/gesah-installer/webapp/src/main/webapp/themes/gesah/i18n/all_de_DE.properties
@@ -7,7 +7,7 @@
 #
 menu_termuse = Nutzungsbedingungen
 menu_powered = Powered by
-menu_about = Über VIVO
+menu_about = Über Vitro
 menu_contactus = Kontakt
 menu_support = Hilfe
 menu_version = Version
