--- a/gesah-installer/webapp/src/main/webapp/themes/gesah/i18n/all_de_DE.properties
+++ b/gesah-installer/webapp/src/main/webapp/themes/gesah/i18n/all_de_DE.properties
@@ -965,7 +965,7 @@ home_page_intro_text = Entdecken Sie die Sammlung des Architekten und Bauhistori
 footer_legal_notices = Legal notices
 footer_technical_information = Technische Informationen
 
-menu_images_and_metadata = Rechtliches Bilder und Metadaten
+menu_images_and_metadata = Bilder und Metadaten
 
 
 
