--- a/gesah-installer/webapp/src/main/webapp/themes/gesah/i18n/all_en_US.properties
+++ b/gesah-installer/webapp/src/main/webapp/themes/gesah/i18n/all_en_US.properties
@@ -21,7 +21,7 @@ header_logo_file_name = logo.svg
 home_page_intro_header = The Albrecht Haupt Collection
 home_page_intro_text = Discover the collection of the architect and building historian Albrecht Haupt (1852-1932), one of the few still cohesively preserved collections of this kind in Germany. Since 1901, Haupt's historical library, his collections of European hand drawings and prints as well as his own travel sketches have been part of the library's <a href="https://www.tib.eu/de/recherchieren-entdecken/sondersammlungen/sammlung-albrecht-haupt">special holdings</a> and are currently being <a href="https://projects.tib.eu/haupt/">digitally indexed</a> and made accessible here.
 
-footer_legal_notices = Legal notices
+footer_legal_notices = Rechtliches
 footer_technical_information = Technical information
 
 menu_images_and_metadata = Images and metadata
