--- a/gesah-installer/webapp/src/main/webapp/themes/gesah/i18n/all_de_DE.properties
+++ b/gesah-installer/webapp/src/main/webapp/themes/gesah/i18n/all_de_DE.properties
@@ -955,7 +955,9 @@ search_collection_text = Durchsuchen Sie die Sammlung
 more_objects_in_albrecht_haupt_collection = Weitere Teilbestände der Sammlung Albrecht Haupt
 
 haupt_library_img_text = Bibliothek
+haupt_library_img_description = Albrecht Haupt's Sammlung von alten Büchern (1600) und Abhandlungen sind in TIB-OPAC katalogisiert.
 haupt_sketches_img_text = Reiseskizzen 
+haupt_sketches_img_description = Reiseskizzen von Albrecht Haupt's eigener Hand (ca. 6000 Blätter) sind bisher mit allegro C erschlossen.
 
 header_logo_file_name = logo.svg
 
