--- a/gesah-installer/webapp/src/main/webapp/themes/gesah/i18n/all_en_US.properties
+++ b/gesah-installer/webapp/src/main/webapp/themes/gesah/i18n/all_en_US.properties
@@ -14,7 +14,9 @@ search_collection_text = Search the collection
 more_objects_in_albrecht_haupt_collection = Further parts of the Albrecht Haupt Collection
 
 haupt_library_img_text = Library
+haupt_library_img_description = Albrecht Haupt's collection of old books (1600) and treatises are catalogued In TIB-OPAC.
 haupt_sketches_img_text = Travel sketches
+haupt_sketches_img_description = Travel sketches of Albrecht Haupt's own hand (ca. 6000 sheets) are indexed with allegro C so far.
 
 header_logo_file_name = logo.svg
 
