--- a/gesah-installer/webapp/src/main/webapp/themes/gesah/i18n/all_de_DE.properties
+++ b/gesah-installer/webapp/src/main/webapp/themes/gesah/i18n/all_de_DE.properties
@@ -938,7 +938,7 @@ cookie_message=Diese Webseite verwendet Cookies, um die Bedienfreundlichkeit zu 
 
 feedback_icon = Rückmeldung
 
-explore_collection_text = Erkunden Sie die Sammlung
+explore_collection_text = Erkunden Sie den Bestand der Einzelblätter
 
 
 search_results_relevance = Relevanz
@@ -951,7 +951,7 @@ project_link_text = Projekte
 collection_link_value = https://www.tib.eu/de/recherchieren-entdecken/sondersammlungen/sammlung-albrecht-haupt
 project_link_value = https://projects.tib.eu/haupt
 contact_link_text = Kontakt
-search_collection_text = Durchsuchen Sie die Sammlung
+search_collection_text = Durchsuchen Sie den Bestand der Einzelblätter
 more_objects_in_albrecht_haupt_collection = Weitere Teilbestände der Sammlung Albrecht Haupt
 
 haupt_library_img_text = Bibliothek
@@ -962,7 +962,7 @@ haupt_sketches_img_description = Reiseskizzen von Albrecht Haupt's eigener Hand 
 header_logo_file_name = logo.svg
 
 home_page_intro_header = Die Sammlung Albrecht Haupt
-home_page_intro_text = Entdecken Sie die Sammlung des Architekten und Bauhistorikers Albrecht Haupt (1852-1932), eine der wenigen noch geschlossen erhaltenen Sammlungen dieser Art in Deutschland. Seit 1901 gehören Haupts historische Bibliothek, seine Sammlungen europäischer Handzeichnungen und Druckgraphiken sowie seine eigenhändigen Reiseskizzen zu den <a href="https://www.tib.eu/de/recherchieren-entdecken/sondersammlungen/sammlung-albrecht-haupt">Sonderbeständen</a> der Bibliothek und werden gegenwärtig <a href="https://projects.tib.eu/haupt/">digital erschlossen</a> und hier zugänglich gemacht.
+home_page_intro_text = Die Sammlung des Architekten und Bauhistorikers Albrecht Haupt (1852-1932) ist eine der wenigen noch geschlossen erhaltenen Sammlungen dieser Art in Deutschland. Seit 1901 gehören Haupts historische Bibliothek, seine Sammlungen europäischer Handzeichnungen und Druckgraphiken sowie seine eigenhändigen Reiseskizzen zu den <a href="https://www.tib.eu/de/recherchieren-entdecken/sondersammlungen/sammlung-albrecht-haupt">Sonderbeständen</a> der Bibliothek und werden gegenwärtig <a href="https://projects.tib.eu/haupt/">digital erschlossen</a> und hier zugänglich gemacht.
 
 footer_legal_notices = Rechtliches
 footer_technical_information = Technische Informationen
