--- a/gesah-installer/webapp/src/main/webapp/themes/gesah/i18n/all_en_US.properties
+++ b/gesah-installer/webapp/src/main/webapp/themes/gesah/i18n/all_en_US.properties
@@ -10,7 +10,9 @@ collection_link_value = https://www.tib.eu/en/search-discover/special-collection
 project_link_value = https://projects.tib.eu/en/haupt/
 contact_link_text = Contact
 
-search_collection_text = Search the collection
+search_collection_text = Search the collection of inidividual graphic sheets
+explore_collection_text = Explore the collection of inidividual graphic sheets
+
 more_objects_in_albrecht_haupt_collection = Further parts of the Albrecht Haupt Collection
 
 haupt_library_img_text = Library
@@ -21,7 +23,7 @@ haupt_sketches_img_description = Travel sketches of Albrecht Haupt's own hand (c
 header_logo_file_name = logo.svg
 
 home_page_intro_header = The Albrecht Haupt Collection
-home_page_intro_text = Discover the collection of the architect and building historian Albrecht Haupt (1852-1932), one of the few still cohesively preserved collections of this kind in Germany. Since 1901, Haupt's historical library, his collections of European hand drawings and prints as well as his own travel sketches have been part of the library's <a href="https://www.tib.eu/de/recherchieren-entdecken/sondersammlungen/sammlung-albrecht-haupt">special holdings</a> and are currently being <a href="https://projects.tib.eu/haupt/">digitally indexed</a> and made accessible here.
+home_page_intro_text = The collection of the architect and building historian Albrecht Haupt (1852-1932) is one of the few still cohesively preserved collections of this kind in Germany. Since 1901, Haupt's historical library, his collections of European hand drawings and prints as well as his own travel sketches have been part of the library's <a href="https://www.tib.eu/de/recherchieren-entdecken/sondersammlungen/sammlung-albrecht-haupt">special holdings</a> and are currently being <a href="https://projects.tib.eu/haupt/">digitally indexed</a> and made accessible here.
 
 footer_legal_notices = Legal notices
 footer_technical_information = Technical information
