--- a/gesah-installer/webapp/src/main/webapp/themes/gesah/i18n/all_en_US.properties
+++ b/gesah-installer/webapp/src/main/webapp/themes/gesah/i18n/all_en_US.properties
@@ -16,7 +16,7 @@ explore_collection_text = Explore the collection of inidividual graphic sheets
 more_objects_in_albrecht_haupt_collection = Further parts of the Albrecht Haupt Collection
 
 haupt_library_img_text = Library
-haupt_library_img_description = Albrecht Haupt's collection of books and treatises are catalogued in TIB OPAC (ca. 1600 volumes).
+haupt_library_img_description = Albrecht Haupt's collection of books and treatises is catalogued in TIB OPAC (ca. 1600 volumes).
 haupt_sketches_img_text = Travel sketches
 haupt_sketches_img_description = Travel sketches and studies of Albrecht Haupt's own hand are indexed with allegro C so far (ca. 6000 sheets).
 
