GESAHV-205 added translation for results_found

--- a/gesah-installer/webapp/src/main/webapp/themes/gesah/i18n/all_de_DE.properties
+++ b/gesah-installer/webapp/src/main/webapp/themes/gesah/i18n/all_de_DE.properties
@@ -972,3 +972,14 @@ menu_images_and_metadata = Bilder und Metadaten
 search_help_text = <p class="Standard" style="margin-left:0;background-color:transparent;border:none;padding:0;text-indent:1.1787401rem;font-size:1.0rem;margin-top:0;margin-bottom:0;margin-right:0;text-align:justify;"><span style="">Geben Sie ein Schlagwort in den </span><span style="font-weight:bold;">Suchschlitz</span><span style=""> ein oder kombinieren Sie Schlagwörter mit den Boolschen Operatoren. Folgende Datenfelder werden mit Ihrer Anfrage abgeglichen:</span></p>         <p class="Standard" style="margin-left:0;background-color:transparent;border:none;padding:0;text-indent:0.11574804rem;font-size:1.0rem;margin-top:0;margin-bottom:0;margin-right:0;text-align:justify;">Titel, Geographische Zuordnung, Sachgruppe (Oberbegriff), Sachgruppe (Unterbegriff), Personen/Organisationen, Orte, Beschreibung, Kommentare ##</p>         <p class="Standard" style="margin-left:0;border:none;padding:0;font-size:1.0rem;margin-top:0;margin-bottom:0;text-align:justify;margin-right:0;"><span style="">Über den</span><span style="font-weight:bold;"> Filterbutton</span><span style=""> (oder eine leere Suchanfrage) gelangen Sie zum Gesamtbestand der digitalisierten Werke. Die Filter sind in Tabs angeordnet und können zur Einschränkung der Ergebnismenge genutzt werden.</span></p>         <p class="Standard" style="margin-left:0;background-color:transparent;border:none;padding:0;text-indent:1.1787401rem;font-size:1.0rem;margin-top:0;margin-bottom:0;margin-right:0;text-align:justify;"><span style="">Bitte beachten Sie, dass es sich um </span><span style="font-weight:bold;">Work in Progress</span><span style=""> handelt. Alle Werke sind mit Objekttyp, Geographischer Zuordnung, Sachgruppe (Oberbegriff), Maßen, einem Titel (oder Hilfstitel) sowie ihren Digitalisaten verknüpft. Daten zu Entstehungszeit und Ort, Künstler_innen, Technik, dargestellten Inhalten u.v.a. werden sukzessive angereichert. </span></p>
 
 search_filters_help_text = Filteroptionen
+
+gesah_search_element_creation_date = Datum der Erstellung
+gesah_search_element_created = Erstellt
+gesah_search_element_edited = Bearbeitet
+gesah_search_element_produced = Produziert
+gesah_search_in_year = im
+gesah_current_inventory_number = inv.
+gesah_former_inventory_number = inv.
+gesah_search_created_by = von
+
+results_found=Ergebnisse
