GESAHV-204 prop statements improvements
GESAHV-204

--- a/gesah-installer/webapp/src/main/webapp/themes/gesah/i18n/all_de_DE.properties
+++ b/gesah-installer/webapp/src/main/webapp/themes/gesah/i18n/all_de_DE.properties
@@ -983,3 +983,7 @@ gesah_former_inventory_number = inv.
 gesah_search_created_by = von
 
 results_found=Ergebnisse
+
+gesah_made_on=auf
+comment=Kommentar
+comment_capitalized=Kommentar
