--- a/gesah-installer/webapp/src/main/webapp/themes/gesah/i18n/all_de_DE.properties
+++ b/gesah-installer/webapp/src/main/webapp/themes/gesah/i18n/all_de_DE.properties
@@ -987,3 +987,8 @@ results_found=Ergebnisse
 gesah_made_on=auf
 comment=Kommentar
 comment_capitalized=Kommentar
+
+
+
+page_title = TIB SAH digital - Die Sammlung Albrecht Haupt
+
