--- a/gesah-installer/webapp/src/main/webapp/themes/gesah/i18n/all_en_US.properties
+++ b/gesah-installer/webapp/src/main/webapp/themes/gesah/i18n/all_en_US.properties
@@ -34,3 +34,5 @@ search_help_text = <p class="Standard" style="margin-left:0;background-color:tra
 search_filters_help_text = Filter options
 
 gesah_made_on=on
+
+page_title = TIB SAH digital - The Albrecht Haupt Collection
