feedback form translations

--- a/gesah-installer/webapp/src/main/webapp/themes/gesah/i18n/all_en_US.properties
+++ b/gesah-installer/webapp/src/main/webapp/themes/gesah/i18n/all_en_US.properties
@@ -36,3 +36,5 @@ search_filters_help_text = Filter options
 gesah_made_on=on
 
 page_title = TIB SAH digital - The Albrecht Haupt Collection
+feedback_title = Feedback
+interest_thanks = Thank you for your interest in the the Albrecht Haupt Collection. Please submit this form with questions, comments, or feedback about the content of this site.
