--- a/gesah-installer/webapp/src/main/webapp/themes/gesah/i18n/all_de_DE.properties
+++ b/gesah-installer/webapp/src/main/webapp/themes/gesah/i18n/all_de_DE.properties
@@ -992,3 +992,5 @@ comment_capitalized=Kommentar
 
 page_title = TIB SAH digital - Die Sammlung Albrecht Haupt
 
+feedback_title = Feedback
+interest_thanks = Vielen Dank für Ihr Interesse an der Sammlung Albrecht Haupt. Bitte nutzen Sie das Formular, wenn Sie  Fragen, Kommentare oder Feedback zum Inhalt dieser Seite haben.
