--- a/gesah-installer/webapp/src/main/webapp/themes/gesah/i18n/all_de_DE.properties
+++ b/gesah-installer/webapp/src/main/webapp/themes/gesah/i18n/all_de_DE.properties
@@ -830,8 +830,8 @@ enter_telephone_number = Bitte im Feld Telefonnummer einen Wert eintragen.
 email_address = E-Mail-Adresse
 email_address_for = E-Mail-Adresse von
 enter_email_address = Bitte im Feld E-Mail-Adresse einen Wert eintragen.
-full_name = vollständiger Name
-full_name_for = vollständiger Name von
+full_name = Vollständiger Name
+full_name_for = Vollständiger Name von
 first_name = Vorname
 last_name = Nachname
 title_not_found = Titel nicht gefunden
