footer about page

--- a/gesah-installer/webapp/src/main/webapp/themes/gesah/i18n/all_en_US.properties
+++ b/gesah-installer/webapp/src/main/webapp/themes/gesah/i18n/all_en_US.properties
@@ -4,6 +4,7 @@ search_results_relevance = Relevance
 search_results_sort_by = Sort by
 search_results_per_page = Results per page
 
+menu_about = About TIB SAH digital
 collection_link_text = Collection Albrecht Haupt
 project_link_text = Projects
 collection_link_value = https://www.tib.eu/en/search-discover/special-collections/the-albrecht-haupt-collection
