GESAHV-222: download image text

--- a/gesah-installer/webapp/src/main/webapp/themes/gesah/i18n/all_de_DE.properties
+++ b/gesah-installer/webapp/src/main/webapp/themes/gesah/i18n/all_de_DE.properties
@@ -994,3 +994,5 @@ page_title = TIB SAH digital - Die Sammlung Albrecht Haupt
 
 feedback_title = Feedback
 interest_thanks = Vielen Dank für Ihr Interesse an der Sammlung Albrecht Haupt. Bitte nutzen Sie das Formular, wenn Sie  Fragen, Kommentare oder Feedback zum Inhalt dieser Seite haben.
+
+download_image=Download
