--- a/gesah-installer/webapp/src/main/webapp/themes/gesah/i18n/all_en_US.properties
+++ b/gesah-installer/webapp/src/main/webapp/themes/gesah/i18n/all_en_US.properties
@@ -39,3 +39,5 @@ gesah_made_on=on
 page_title = TIB SAH digital - The Albrecht Haupt Collection
 feedback_title = Feedback
 interest_thanks = Thank you for your interest in the the Albrecht Haupt Collection. Please submit this form with questions, comments, or feedback about the content of this site.
+
+download_image=Download
