--- a/gesah-installer/webapp/src/main/webapp/themes/gesah/i18n/all_en_US.properties
+++ b/gesah-installer/webapp/src/main/webapp/themes/gesah/i18n/all_en_US.properties
@@ -41,3 +41,5 @@ feedback_title = Feedback
 interest_thanks = Thank you for your interest in the the Albrecht Haupt Collection. Please submit this form with questions, comments, or feedback about the content of this site.
 
 download_image=Download
+
+home_page_index_status_text=Status of indexing: All sheets in the collection of prints and drawings have been digitised and made available here for browsing. Please note in your search that the degree of indexing still varies considerably. Objects that have been recorded only rudimentarily so far can best be filtered via the general facets of object type, geographical assignment, object category (generic term).
