Added follow on mastodon link to footer

--- a/gesah-installer/webapp/src/main/webapp/themes/gesah/i18n/all_de_DE.properties
+++ b/gesah-installer/webapp/src/main/webapp/themes/gesah/i18n/all_de_DE.properties
@@ -998,3 +998,4 @@ interest_thanks = Vielen Dank für Ihr Interesse an der Sammlung Albrecht Haupt.
 download_image=Download
 
 home_page_index_status_text=Zum Stand der Erfassung: Alle Graphiken der losen Blattsammlung wurden digitalisiert und hier zur Sichtung bereitgestellt. Bitte beachten Sie bei Ihrer Suche, dass der Grad der Erschließung noch stark variiert. Bislang nur rudimentär erfasste Objekte lassen sich am besten über die groben Facetten von Objekttyp, Geographische Einordung, Sachgruppe (Oberbegriff) filtern.
+follow_us_on_mastodon=Folgen Sie uns auf Mastodon
