--- a/gesah-installer/webapp/src/main/webapp/local/i18n/all.properties
+++ b/gesah-installer/webapp/src/main/webapp/local/i18n/all.properties
@@ -26,7 +26,7 @@ attribution_type = Attribution Type
 material = Material
 technique = Technique
 role_type = Role Type
-literal_date_appelatlion = Literal Date Appelatlion
+literal_date_appelatlion = Literal Date Appellation
 description = Description
 
 title_for = "title" entry for
