--- a/gesah-installer/webapp/src/main/webapp/themes/gesah/i18n/all_en_US.properties
+++ b/gesah-installer/webapp/src/main/webapp/themes/gesah/i18n/all_en_US.properties
@@ -11,8 +11,8 @@ collection_link_value = https://www.tib.eu/en/search-discover/special-collection
 project_link_value = https://projects.tib.eu/en/haupt/
 contact_link_text = Contact
 
-search_collection_text = Search the collection of inidividual graphic sheets
-explore_collection_text = Explore the collection of inidividual graphic sheets
+search_collection_text = Search the collection of individual graphic sheets
+explore_collection_text = Explore the collection of individual graphic sheets
 
 more_objects_in_albrecht_haupt_collection = Further parts of the Albrecht Haupt Collection
 
