refactored forms code

--- a/gesah-installer/webapp/src/main/webapp/local/i18n/all.properties
+++ b/gesah-installer/webapp/src/main/webapp/local/i18n/all.properties
@@ -18,6 +18,7 @@ supplemental_information_hint_inscription = (supplemental information about the 
 creation_for = creation entry for
 production_for = production entry for
 edition_for = edition entry for
+role_for = role for
 select_attribution_type_value = select an attribution type
 select_technique_value = select technique
 select_material_value = select material
