removed custom extended search replaced by extended search ported to Vitro. Updated labels, updated Vitro version, updated data getter to display home page filters.

--- a/gesah-installer/webapp/src/main/webapp/themes/gesah/i18n/all_de_DE.properties
+++ b/gesah-installer/webapp/src/main/webapp/themes/gesah/i18n/all_de_DE.properties
@@ -942,9 +942,9 @@ explore_collection_text = Erkunden Sie den Bestand der Einzelblätter
 
 
 search_results_relevance = Relevanz
-search_results_sort_by = Sortieren nach
+search_results_sort_by = Sortieren nach {0}
 
-search_results_per_page = Ergebnisse pro Seite
+search_results_per_page = {0} Ergebnisse pro Seite
 
 collection_link_text = Sammlung Albrecht Haupt
 project_link_text = Projekte
