--- a/gesah-installer/webapp/src/main/webapp/themes/gesah/i18n/all_en_US.properties
+++ b/gesah-installer/webapp/src/main/webapp/themes/gesah/i18n/all_en_US.properties
@@ -1,8 +1,8 @@
 from = from
 to = to
 search_results_relevance = Relevance
-search_results_sort_by = Sort by
-search_results_per_page = Results per page
+search_results_sort_by = Sort by {0}
+search_results_per_page = {0} results per page
 
 menu_about = About TIB SAH digital
 collection_link_text = Collection Albrecht Haupt
