--- a/gesah-installer/webapp/src/main/webapp/local/i18n/all.properties
+++ b/gesah-installer/webapp/src/main/webapp/local/i18n/all.properties
@@ -124,4 +124,4 @@ organizer_type_capitalized=Organizer type
 organizer_capitalized=Organizer
 selected_organizer=Selected organizer
 
-results_found=results found
+results_found= {0} results found
