--- a/gesah-installer/webapp/src/main/webapp/themes/gesah/i18n/all_de_DE.properties
+++ b/gesah-installer/webapp/src/main/webapp/themes/gesah/i18n/all_de_DE.properties
@@ -982,7 +982,7 @@ gesah_current_inventory_number = inv.
 gesah_former_inventory_number = inv.
 gesah_search_created_by = von
 
-results_found=Ergebnisse
+results_found= {0} Ergebnisse gefunden
 
 gesah_made_on=auf
 comment=Kommentar
