Improved CO titles, added description meta tag

--- a/gesah-installer/webapp/src/main/webapp/themes/gesah/i18n/all_de_DE.properties
+++ b/gesah-installer/webapp/src/main/webapp/themes/gesah/i18n/all_de_DE.properties
@@ -1001,3 +1001,10 @@ home_page_index_status_text=Zum Stand der Erfassung: Alle Graphiken der losen Bl
 follow_us_on_mastodon=Folgen Sie uns auf Mastodon
 
 error_message_index_number_is_empty = Die Indexnummer darf nicht leer sein
+
+meta_description_co_text_participants_3 = Das {0} mit dem Titel {1} wurde geschaffen von {2}
+meta_description_co_text_participants_2 = Der {0} mit dem Titel {1} wurde geschaffen von {2}
+meta_description_co_text_participants_1 = Die {0} mit dem Titel {1} wurde geschaffen von {2}
+
+meta_co_title = {1} - {0}
+
