--- a/gesah-installer/webapp/src/main/webapp/themes/gesah/i18n/all_en_US.properties
+++ b/gesah-installer/webapp/src/main/webapp/themes/gesah/i18n/all_en_US.properties
@@ -47,3 +47,9 @@ home_page_index_status_text=Status of indexing: All sheets in the collection of 
 follow_us_on_mastodon=Follow us on Mastodon
 
 error_message_index_number_is_empty = Index number should not be empty
+
+meta_description_co_text_participants_1 = The {0} with title {1} was created by {2}
+meta_description_co_text_participants_2 = The {0} with title {1} was created by {2}
+meta_description_co_text_participants_3 = The {0} with title {1} was created by {2}
+
+meta_co_title = {1} - {0}
